# lsm-tree

./: .coderabbit.yaml  .gitignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  TREE_CHECKSUM_VERIFICATION.md  UNSAFE.md  build.rs  compile_examples.mjs  segment_history.jsonl
.config/: nextest.toml
.forge/16/: analysis.md  known-gaps.md
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/instructions/: code-review.instructions.md  rust.instructions.md
.github/scripts/: run-benchmarks.sh
.github/workflows/: benchmark.yml  cleanup-branches.yml  codecov.yml  coordinode-ci.yml  coordinode-release.yml  dependabot-auto-merge.yml  flamegraph.yml  issue-labeler.yml  test.yml  upstream-monitor.yml
benches/: block.rs  bloom.rs  fd_table.rs  level_manifest.rs  lsmt.rs  memtable.rs  merge.rs  merge_point_read.rs  multi_get.rs  partition_point.rs  prefix_bloom.rs  run_reader.rs  tli.rs  tree.rs
examples/: DIRECT_IO_BENCH.md  Dockerfile.bench  direct_io_bench.rs  run_bench.sh
fuzz/: Cargo.toml
fuzz/compare_prefixed_slice/: .gitignore  Cargo.toml
fuzz/compare_prefixed_slice/src/: main.rs
fuzz/data_block/: Cargo.toml  nuclear.sh
fuzz/data_block/src/: main.rs
fuzz/fuzz_targets/: data_block.rs  partition_point.rs
fuzz/index_block/: Cargo.toml
fuzz/index_block/src/: main.rs
fuzz/prefix_filter/: .gitignore  Cargo.toml
fuzz/prefix_filter/src/: main.rs
fuzz/table_read/: Cargo.toml
fuzz/table_read/src/: main.rs
microbench/: run.nu
microbench/block_bin_index/: Cargo.toml  run.nu  template.py  template3d_space.py  template3d_speed.py
microbench/block_hash_index/: Cargo.toml  template.py
microbench/block_load/: Cargo.toml  run.nu  template.py
microbench/block_load/src/: main.rs
microbench/bloom_fpr/: Cargo.toml  run.nu  template.py
microbench/bloom_speed/: Cargo.toml  run.nu  template.py
microbench/fractional_cascading/: Cargo.toml  run.nu  run.py  template.py
microbench/hash_fns/: .gitignore  Cargo.toml  run.nu  template.py
microbench/hash_fns/src/: lib.rs  main.rs
model/: .gitignore  Cargo.toml
model/src/: main.rs
src/: abstract.rs  abstract_tree.rs  active_tombstone_set.rs  any_tree.rs  binary_search.rs  bit_array.rs  block_cache.rs  bloom.rs  cache.rs  checksum.rs  clipping_iter.rs  coding.rs  comparator.rs  compression.rs  config.rs  descriptor_table.rs  disk_block.rs  double_ended_peekable.rs  either.rs  encryption.rs  error.rs  export._rs  export.rs  fallible_clipping_iter.rs  file.rs  file_accessor.rs  flush.rs  format_version.rs  fs.rs  hash.rs  heap.rs  id.rs  ingestion.rs  iouring.rs  iter_guard.rs  key.rs  key_range.rs  level_reader.rs  level_scanner.rs  lib.rs  (+34 more)
src/blob_tree/: cache.rs  compression.rs  gc.rs  handle.rs  index.rs  ingest.rs  mod.rs  value.rs
src/bloom/: bit_array.rs  mod.rs
src/compaction/: drop_range.rs  fifo.rs  filter.rs  flavour.rs  leveled.rs  levelled.rs  maintenance.rs  major.rs  mod.rs  movedown.rs  pulldown.rs  stream.rs  tiered.rs  worker.rs
src/compression/: mod.rs  zstd_ffi.rs  zstd_pure.rs
src/config/: block_size.rs  compression.rs  filter.rs  hash_ratio.rs  mod.rs  pinning.rs  restart_interval.rs
src/config_new/: mod.rs
src/descriptor_table/: lru.rs  mod.rs
src/direct_io/: aligned_buffer.rs  aligned_reader.rs  aligned_writer.rs  chunked.rs  fallback.rs  linux.rs  macos.rs  mod.rs  syscall_assertions.rs
src/fs/: io_uring_fs.rs  mod.rs  std_fs.rs
src/level_manifest/: hidden_set.rs  iter.rs  level.rs  mod.rs
src/levels/: iter.rs  level.rs  mod.rs  segment_history.rs
src/memtable/: arena.rs  interval_tree.rs  mod.rs  skiplist.rs  value_store.rs
src/segment/: block.rs  data_block_handle_queue.rs  file_offsets.rs  forward_reader.rs  id.rs  index_block_consumer.rs  inner.rs  iter.rs  level_reader.rs  meta.rs  mod.rs  multi_reader.rs  multi_writer.rs  new_block_consumer.rs  new_segment_reader.rs  prefix.rs  range.rs  reader.rs  regions.rs  scanner.rs  tests.rs  trailer.rs  util.rs  value_block.rs  value_block_consumer.rs  writer.rs
src/slice/: mod.rs  slice_bytes.rs
src/super_segment/: inner.rs  meta.rs  mod.rs  trailer.rs  util.rs
src/table/: id.rs  inner.rs  iter.rs  meta.rs  mod.rs  multi_writer.rs  range_tombstone_block_by_end.rs  range_tombstone_block_by_start.rs  range_tombstone_encoder.rs  regions.rs  scanner.rs  tests.rs  util.rs
src/tree/: ingest.rs  inner.rs  mod.rs  multi_get_linux.rs  sealed.rs
src/version/: blob_file_list.rs  key_range_partition.rs  mod.rs  optimize.rs  persist.rs  recovery.rs  run.rs  super_version.rs
src/vlog/: accessor.rs  compression.rs  config.rs  handle.rs  index.rs  manifest.rs  mod.rs  scanner.rs  value_log.rs
test_fixture/: v1_export  v1_export_corrupt
tests/: blob_compression.rs  blob_drop_after_flush.rs  blob_drop_range_gc_stats.rs  blob_empty_flush.rs  blob_fifo_limit.rs  blob_file_full_file_checksum.rs  blob_flush_gc_stats.rs  blob_gc.rs  blob_gc_watermark.rs  blob_ingest.rs  blob_ingest_relink.rs  blob_major_compact_drop_dead_files.rs  blob_major_compact_gc_stats.rs  blob_major_compact_relink.rs  blob_major_compact_relocation.rs  blob_major_compact_relocation_recovery.rs  blob_nuke_gc_stats.rs  blob_pinned_fd.rs  blob_recover_gc_stats.rs  blob_recovery.rs  blob_register_table_rotation.rs  blob_sep_threshold.rs  blob_simple.rs  blob_tombstone.rs  blob_tree_flush._rs  blob_tree_flush.rs  blob_tree_guarded_size.rs  blob_tree_reload_blob.rs  block_cache.rs  bloom_fpr.rs  compaction_filter.rs  compaction_filter_gc_stats_change.rs  compaction_filter_gc_stats_destroy.rs  compaction_filter_gc_stats_remove.rs  compaction_filter_gc_stats_remove_weak.rs  compaction_filter_seqno.rs  compaction_filter_snapshot.rs  compaction_filter_ttl.rs  compaction_readers_grouping.rs  custom_comparator.rs  (+116 more)
tools/db_bench/: Cargo.toml
tools/db_bench/src/: calibrate.rs  config.rs  db.rs  flame.rs  main.rs  reporter.rs
tools/db_bench/src/workloads/: fillrandom.rs  fillseq.rs  mergerandom.rs  mod.rs  overwrite.rs  prefixscan.rs  readrandom.rs  readseq.rs  readwhilewriting.rs  seekrandom.rs
(+170 files in other folders)
