[package]
name = "lsm-tree"
description = "A K.I.S.S. implementation of log-structured merge trees (LSM-trees/LSMTs)"
license = "MIT OR Apache-2.0"
version = "2.10.2"
edition = "2021"
rust-version = "1.76.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/lsm-tree"
homepage = "https://github.com/fjall-rs/lsm-tree"
keywords = ["database", "lsmt", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "lsm_tree"
path = "src/lib.rs"

[features]
default = []
lz4 = ["dep:lz4_flex"]
miniz = ["dep:miniz_oxide"]
bytes = ["value-log/bytes"]

[dependencies]
byteorder = "1.5.0"
crossbeam-skiplist = "0.1.3"
double-ended-peekable = "0.1.0"
enum_dispatch = "0.3.13"
guardian = "1.1.0"
interval-heap = "0.0.5"
log = "0.4.22"
lz4_flex = { version = "=0.11.3", optional = true, default-features = false }
miniz_oxide = { version = "0.8.0", optional = true }
path-absolutize = "3.1.1"
quick_cache = { version = "0.6.5", default-features = false, features = [] }
rustc-hash = "2.0.0"
self_cell = "1.0.4"
tempfile = "3.12.0"
value-log = { version = "~1.9", default-features = false, features = [] }
varint-rs = "2.2.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
fs_extra = "1.3.0"
nanoid = "0.4.0"
rand = "0.9.0"
test-log = "0.2.16"

# half 2.5.0 has MSRV 1.81
half = "=2.4.0"

[package.metadata.cargo-all-features]
denylist = []

[[bench]]
name = "tli"
harness = false
path = "benches/tli.rs"
required-features = []

[[bench]]
name = "merge"
harness = false
path = "benches/merge.rs"
required-features = []

[[bench]]
name = "memtable"
harness = false
path = "benches/memtable.rs"
required-features = []

[[bench]]
name = "bloom"
harness = false
path = "benches/bloom.rs"
required-features = []

[[bench]]
name = "block"
harness = false
path = "benches/block.rs"
required-features = ["lz4", "miniz"]

[[bench]]
name = "tree"
harness = false
path = "benches/tree.rs"
required-features = ["lz4", "miniz"]

[[bench]]
name = "level_manifest"
harness = false
path = "benches/level_manifest.rs"
required-features = []

[[bench]]
name = "fd_table"
harness = false
path = "benches/fd_table.rs"
required-features = []

[[bench]]
name = "partition_point"
harness = false
path = "benches/partition_point.rs"
required-features = []
