[package]
name = "lsm-tree-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lsm-tree = { path = ".." }

[[bin]]
name = "partition_point"
path = "fuzz_targets/partition_point.rs"
test = false
doc = false
bench = false
