[package]
name = "model"
version = "0.1.0"
edition = "2024"

[profile.release]
debug-assertions = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
lsm-tree = { path="..", features = ["lz4"] }
mimalloc = "0.1.48"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
