[package]
name = "model"
version = "0.1.0"
edition = "2024"

[profile.release]
debug-assertions = true

[dependencies]
byteview = { version = "0.8.0", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
lsm-tree = { path = "..", features = ["lz4"] }
mimalloc = "0.1.48"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
zipf = "7.0.2"
