[package]
name = "hash_bench"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
cityhasher = "0.1.0"
fnv = "1.0.7"
foldhash = "0.1.5"
fxhash = "0.2.1"
gxhash = "3.5.0"
metrohash = "1.0.7"
rand = "0.9.1"
rapidhash = "3.0.0"
rustc-hash = "2.1.1"
seahash = "4.1.0"
wyhash = "0.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
twox-hash = { version = "2.1.0" }
